--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,9 @@ li {
 }
 
 img {
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 50%;
+    max-height: 50%;
+    cursor: pointer;
 }
 
 .header {
@@ -65,13 +66,10 @@ img {
 
 #bestMovieTitle {
     font-size: 30px;
-    color: white;
-    display: flex;
-
-}
-
-#bestMovieTitle:hover {
     color: #ffcc00;
+    display: flex;
+    justify-content: center;
+
 }
 
 #bestMovieImg {
@@ -80,6 +78,8 @@ img {
     cursor: pointer;
     text-align: center;
     justify-content: center;
+    margin-left: 25%;
+    margin-top: 5%;
 
 }
 
@@ -87,4 +87,45 @@ img {
     box-shadow: 0 4px 8px #ffcc00;
     padding: 20px;
     border-radius: 8px;
+    margin-bottom: 50px;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    gap: 20px;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.modal-content {
+    margin: auto;
+    display: block;
+    max-width: 80%;
+    max-height: 80%;
+}
+
+.close {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    font-size: 30px;
+    color: #fff;
+    cursor: pointer;
+}
+
+#modalTitle {
+    color: #ffcc00;
+    text-align: center;
+    font-size: 30px;
 }
