--- a/css/style.css
+++ b/css/style.css
@@ -34,8 +34,7 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
-
+    flex-wrap: nowrap;
 }
 
 .header__logo {
@@ -73,12 +72,9 @@ img {
 }
 
 #bestMovieImg {
-    display: flex;
     box-shadow: #ffcc00 0px 0px 10px;
     cursor: pointer;
     text-align: center;
-    justify-content: center;
-    margin-left: 25%;
     margin-top: 5%;
 
 }
@@ -93,12 +89,13 @@ img {
     box-shadow: 0 4px 8px #ffcc00;
     padding: 20px;
     border-radius: 8px;
-    margin-bottom: 50px;
+    text-align: center;
+    margin-bottom: 20px;
 }
 
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(7, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
     gap: 20px;
 }
 
