--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,8 @@ li {
 }
 
 img {
-    max-width: 50%;
-    max-height: 50%;
+    max-width: 100%;
+    max-height: 100%;
     cursor: pointer;
 }
 
@@ -50,12 +50,12 @@ img {
 }
 
 .header__title {
-    font-size: 30px;
-    font-weight: 400;
+    font-size: 60px;
     text-align: center;
     padding-right: 100px;
     margin: 0;
-    color: black;
+    color: #ffcc00;
+    text-shadow: 5px 5px 10px red;
 }
 
 .header__category {
@@ -68,6 +68,7 @@ img {
     color: #ffcc00;
     display: flex;
     justify-content: center;
+    text-shadow: 5px 5px 10px red;
 
 }
 
@@ -76,6 +77,8 @@ img {
     cursor: pointer;
     text-align: center;
     margin-top: 5%;
+    max-width: 50%;
+    max-height: 50%;
 
 }
 
@@ -83,6 +86,17 @@ img {
     color: #ffcc00;
     text-align: center;
     font-size: 30px;
+    text-shadow: 5px 5px 10px red;
+}
+
+#modalGenre,
+#modalDate,
+#modalRated {
+    color: #ffcc00;
+    text-align: center;
+    font-size: 20px;
+    margin-top: 30px;
+    text-shadow: 5px 5px 10px red;
 }
 
 .container {
@@ -121,8 +135,8 @@ img {
 .close {
     position: absolute;
     top: 15px;
-    right: 15px;
+    right: 500px;
     font-size: 30px;
-    color: #fff;
+    color: #ffcc00;
     cursor: pointer;
 }
