--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,9 @@ img {
 .header__nav {
     display: flex;
     justify-content: space-between;
+    cursor: pointer;
+    color: #ffcc00;
+    text-shadow: 5px 5px 10px red;
 }
 
 .header__title {
@@ -91,11 +94,18 @@ img {
 
 #modalGenre,
 #modalDate,
-#modalRated {
+#modalRated,
+#modalScore,
+#modalDirector,
+#modalActors,
+#modalDuration,
+#modalCountries,
+#modalIncome,
+#modalDescription {
     color: #ffcc00;
     text-align: center;
     font-size: 20px;
-    margin-top: 30px;
+    margin-top: 15px;
     text-shadow: 5px 5px 10px red;
 }
 
