--- a/css/style.css
+++ b/css/style.css
@@ -172,11 +172,11 @@ img {
 .carousel-button {
     background-color: #333;
     margin-top: 135px;
-
+    width: 110px;
 }
 
 .carousel-button.left {
-    margin-right: 18px;
+    margin-right: 25px;
 }
 
 
